--- a/sass/style.scss
+++ b/sass/style.scss
@@ -2,3 +2,4 @@
  @import "./components/main";
  @import "./components/footer"; 
  @import "./components/bootstrap-style";
+ @import "./base/variables.scss";
