--- a/scss/base/variables.scss
+++ b/scss/base/variables.scss
@@ -1,10 +1,17 @@
-// Colores
+// Color
+$color-primary: #007bff;
 $color-black: #000000;
 $color-green: #4caf50;
 $color-red: #f44336;
 $color-lightgreen: #45a049;
 $color-lightgray: #f2f2f200;
 $color-lightblue: #aeffe4;
+$color-white: #ffffff;
+
+//font styles
+$font-family: Arial, sans-serif;
+$font-size-h1: 24px;
+$font-size-p: 16px;
 
 $font-size-2rem: 2rem;
 $font-size-3rem: 3rem;
@@ -25,4 +32,11 @@ $font-weight-900: 900;
   border: none;
   cursor: pointer;
   margin-right: 10px;
+}
+
+// Mixin
+@mixin text-style($color, $size) {
+  color: $color;
+  font-size: $size;
+  font-family: $font-family;
 }
