--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -10,14 +10,14 @@
     text-align: center;
     font-size: $font-size-2rem;
     font-weight: $font-weight-600;
-    color: $color-black;
+    color: rgb(0, 0, 0);
   }
   
   .blanco {
     text-align: center;
     font-size: $font-size-3rem;
     font-weight: $font-weight-900;
-    color: $color-black;
+    color: rgb(0, 0, 0);
   }
   
   .grid {
