--- a/css/style.css
+++ b/css/style.css
@@ -36,8 +36,8 @@
   --bs-gray-700: #495057;
   --bs-gray-800: #343a40;
   --bs-gray-900: #212529;
-  --bs-danger: #1f1f1f;
-  --bs-danger-rgb: 31, 31, 31;
+  --bs-danger: rgb(39, 39, 39);
+  --bs-danger-rgb: 39, 39, 39;
   --bs-primary-text-emphasis: #052c65;
   --bs-secondary-text-emphasis: #2b2f32;
   --bs-success-text-emphasis: #0a3622;
@@ -2951,35 +2951,35 @@ textarea.form-control-lg {
 
 .btn-danger {
   --bs-btn-color: #fff;
-  --bs-btn-bg: #1f1f1f;
-  --bs-btn-border-color: #1f1f1f;
+  --bs-btn-bg: rgb(39, 39, 39);
+  --bs-btn-border-color: rgb(39, 39, 39);
   --bs-btn-hover-color: #fff;
-  --bs-btn-hover-bg: #1a1a1a;
-  --bs-btn-hover-border-color: #191919;
-  --bs-btn-focus-shadow-rgb: 65, 65, 65;
+  --bs-btn-hover-bg: #212121;
+  --bs-btn-hover-border-color: #1f1f1f;
+  --bs-btn-focus-shadow-rgb: 71, 71, 71;
   --bs-btn-active-color: #fff;
-  --bs-btn-active-bg: #191919;
-  --bs-btn-active-border-color: #171717;
+  --bs-btn-active-bg: #1f1f1f;
+  --bs-btn-active-border-color: #1d1d1d;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
   --bs-btn-disabled-color: #fff;
-  --bs-btn-disabled-bg: #1f1f1f;
-  --bs-btn-disabled-border-color: #1f1f1f;
+  --bs-btn-disabled-bg: rgb(39, 39, 39);
+  --bs-btn-disabled-border-color: rgb(39, 39, 39);
 }
 
 .btn-outline-danger {
-  --bs-btn-color: #1f1f1f;
-  --bs-btn-border-color: #1f1f1f;
+  --bs-btn-color: rgb(39, 39, 39);
+  --bs-btn-border-color: rgb(39, 39, 39);
   --bs-btn-hover-color: #fff;
-  --bs-btn-hover-bg: #1f1f1f;
-  --bs-btn-hover-border-color: #1f1f1f;
-  --bs-btn-focus-shadow-rgb: 31, 31, 31;
+  --bs-btn-hover-bg: rgb(39, 39, 39);
+  --bs-btn-hover-border-color: rgb(39, 39, 39);
+  --bs-btn-focus-shadow-rgb: 39, 39, 39;
   --bs-btn-active-color: #fff;
-  --bs-btn-active-bg: #1f1f1f;
-  --bs-btn-active-border-color: #1f1f1f;
+  --bs-btn-active-bg: rgb(39, 39, 39);
+  --bs-btn-active-border-color: rgb(39, 39, 39);
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-  --bs-btn-disabled-color: #1f1f1f;
+  --bs-btn-disabled-color: rgb(39, 39, 39);
   --bs-btn-disabled-bg: transparent;
-  --bs-btn-disabled-border-color: #1f1f1f;
+  --bs-btn-disabled-border-color: rgb(39, 39, 39);
   --bs-gradient: none;
 }
 
@@ -6377,7 +6377,7 @@ textarea.form-control-lg {
 
 .text-bg-danger {
   color: #fff !important;
-  background-color: RGBA(31, 31, 31, var(--bs-bg-opacity, 1)) !important;
+  background-color: RGBA(39, 39, 39, var(--bs-bg-opacity, 1)) !important;
 }
 
 .link-danger {
@@ -6385,8 +6385,8 @@ textarea.form-control-lg {
   text-decoration-color: RGBA(var(--bs-danger-rgb), var(--bs-link-underline-opacity, 1)) !important;
 }
 .link-danger:hover, .link-danger:focus {
-  color: RGBA(25, 25, 25, var(--bs-link-opacity, 1)) !important;
-  text-decoration-color: RGBA(25, 25, 25, var(--bs-link-underline-opacity, 1)) !important;
+  color: RGBA(31, 31, 31, var(--bs-link-opacity, 1)) !important;
+  text-decoration-color: RGBA(31, 31, 31, var(--bs-link-underline-opacity, 1)) !important;
 }
 
 .link-body-emphasis {
