--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,5 @@
 $theme-colors: (
-    "danger":    #1f1f1f,
+    "danger":    rgb(39, 39, 39),
   ) ;
  .navbar-nav .nav-link
  {color: rgb(255, 255, 255);
