--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -7,8 +7,16 @@
     grid-gap: 20px;
     padding: 20px;
   }
-  
+  .videoedit{
+    position: absolute;
+    z-index: -2;
+    height: 100vh;
+    width: 100vw;
+  }
   .item {
+    align-items: center;
+    height: 80vh;
+    width: 50vw;
     padding: 20px;
     background-color: $color-white;
     border: 1px solid $color-primary;
@@ -36,6 +44,7 @@
       margin-bottom: 15px;
     }
   
+    }
     form {
       display: flex;
       flex-direction: column;
@@ -69,5 +78,5 @@
       margin-bottom: 15px;
       padding: 5px;
     }
-  }
+  
   
