--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -5,16 +5,34 @@
     background-color: $color-lightgray;
     padding: 20px;
   }
-.container2 {
+  .container2 {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    @include center;
     padding: 20px;
     height: 80vh;
     width: 100vw;
-  }  
+  
+    font-size: 16px;
+    line-height: 1.5;
+  
+    @media screen and (max-width: $small-screen) {
+      font-size: 14px;
+    }
+  
+    @media screen and (min-width: $small-screen) and (max-width: $medium-screen) {
+      font-size: 18px;
+    }
+  
+    @media screen and (min-width: $medium-screen) and (max-width: $large-screen) {
+      font-size: 20px;
+    }
+  
+    @media screen and (min-width: $large-screen) {
+      font-size: 24px;
+    }
+  }
   .blanco2 {
     text-align: center;
     font-size: $font-size-2rem;
