--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -1,82 +1,14 @@
 @import "../base/variables.scss";
+@import "../base/mixins";
 
+.main {
+  @include grid-style;
+}
 
-.main{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-gap: 20px;
-    padding: 20px;
-  }
-  .videoedit{
-    position: absolute;
-    z-index: -2;
-    height: 100vh;
-    width: 100vw;
-  }
-  .item {
-    align-items: center;
-    height: 80vh;
-    width: 50vw;
-    padding: 20px;
-    background-color: $color-white;
-    border: 1px solid $color-primary;
-    transition: transform 0.3s ease; //transición
-  
-    // borde gradient
-    border-image: $border-gradient 1;
-    border-image-slice: 1; // propiedad para especificar corte gradiente
-  
-    &:hover {
-      transform: translateY(-5px); // Efecto de elevación cursor sobre elemento
-    }
-  
-    &:active {
-      transform: scale(0.95); // Efecto de reducción clic en el elemento
-    }
-  
-    h1 {
-      @include text-style($color-primary, $font-size-h1);
-      margin-bottom: 10px;
-    }
-  
-    p {
-      @include text-style($color-black, $font-size-p);
-      margin-bottom: 15px;
-    }
-  
-    }
-    form {
-      display: flex;
-      flex-direction: column;
-  
-      input[type="submit"],
-      input[type="reset"] {
-        background-color: $color-primary;
-        color: $color-white;
-        padding: 10px 15px;
-        border: none;
-        cursor: pointer;
-        transition: background-color 0.3s ease; // Agregamos una transición suave para el botón
-      }
-  
-      input[type="submit"]:hover,
-      input[type="reset"]:hover {
-        background-color: darken($color-primary, 10%);
-      }
-  
-      input[type="submit"]:active {
-        transform: scale(1.1);
-      }
-    }
-  
-    label {
-      @include text-style($color-black, $font-size-p);
-    }
-  
-    input,
-    select {
-      margin-bottom: 15px;
-      padding: 5px;
-    }
-  
-  
+.item {
+  @include item-style;
+}
+
+form {
+  @include form-style;
+}
