--- a/css/style.css
+++ b/css/style.css
@@ -11209,6 +11209,8 @@ textarea.form-control-lg {
   }
 }
 .container {
+  display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   text-align: center;
@@ -11224,35 +11226,40 @@ textarea.form-control-lg {
   padding: 20px;
   height: 80vh;
   width: 100vw;
-  font-size: 16px;
-  line-height: 1.5;
+  font-size: 4rem;
+  line-height: 6rem;
+}
+@media screen and (max-width: 940px) {
+  .container2 {
+    font-size: 3.2rem;
+    line-height: 4.8rem;
+  }
+  .container2 img {
+    display: none;
+  }
 }
 @media screen and (max-width: 768px) {
   .container2 {
-    font-size: 14px;
+    font-size: 1.6rem;
+    line-height: 4.2rem;
+  }
+  .container2 img {
+    display: none;
   }
 }
-@media screen and (min-width: 768px) and (max-width: 992px) {
+@media screen and (max-width: 480px) {
   .container2 {
-    font-size: 18px;
-  }
-}
-@media screen and (min-width: 992px) and (max-width: 1200px) {
-  .container2 {
-    font-size: 20px;
-  }
-}
-@media screen and (min-width: 1200px) {
-  .container2 {
-    font-size: 24px;
+    font-size: 1.2rem;
+    line-height: 3.6rem;
   }
 }
 
 .blanco2 {
   text-align: center;
+  color: #000000;
   font-size: 2rem;
+  font-family: Arial, sans-serif;
   font-weight: 600;
-  color: rgb(0, 0, 0);
 }
 
 .textheight {
@@ -11326,9 +11333,10 @@ textarea.form-control-lg {
 
 .blanco {
   text-align: center;
+  color: #000000;
   font-size: 3rem;
+  font-family: Arial, sans-serif;
   font-weight: 900;
-  color: rgb(0, 0, 0);
 }
 
 .grid {
@@ -11358,18 +11366,8 @@ textarea.form-control-lg {
   padding: 20px;
 }
 
-.videoedit {
-  position: absolute;
-  z-index: -2;
-  height: 100vh;
-  width: 100vw;
-}
-
 .item {
   align-items: center;
-  height: 80vh;
-  width: 50vw;
-  padding: 20px;
   background-color: #ffffff;
   border: 1px solid #000000;
   transition: transform 0.3s ease;
@@ -11415,15 +11413,13 @@ form input[type=reset]:hover {
 form input[type=submit]:active {
   transform: scale(1.1);
 }
-
-label {
+form label {
   color: #000000;
   font-size: 16px;
   font-family: Arial, sans-serif;
 }
-
-input,
-select {
+form input,
+form select {
   margin-bottom: 15px;
   padding: 5px;
 }
