--- a/scss/style.scss
+++ b/scss/style.scss
@@ -13,4 +13,5 @@ $theme-colors: (
  @import "./components/footer"; 
  @import "./components/body.scss";
  @import "./base/variables.scss";
+ @import "./base/mixins";
  @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
