--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,21 @@
   color: rgb(149, 192, 255);
 }
 
+@keyframes bounce {
+  0%, 20%, 50%, 80%, 100% {
+    transform: translateY(0);
+  }
+  40% {
+    transform: translateY(-30px);
+  }
+  60% {
+    transform: translateY(-15px);
+  }
+}
+.animated-button {
+  animation: bounce 1s infinite; /* Aplicar la animación de rebote definida en keyframes */
+}
+
 /*!
  * Bootstrap  v5.3.0 (https://getbootstrap.com/)
  * Copyright 2011-2023 The Bootstrap Authors
@@ -37,8 +52,8 @@
   --bs-gray-700: #495057;
   --bs-gray-800: #343a40;
   --bs-gray-900: #212529;
-  --bs-danger: rgb(255, 255, 255);
-  --bs-danger-rgb: 255, 255, 255;
+  --bs-danger: rgb(246, 246, 246);
+  --bs-danger-rgb: 246, 246, 246;
   --bs-primary-text-emphasis: #052c65;
   --bs-secondary-text-emphasis: #2b2f32;
   --bs-success-text-emphasis: #0a3622;
@@ -2952,35 +2967,35 @@ textarea.form-control-lg {
 
 .btn-danger {
   --bs-btn-color: #000;
-  --bs-btn-bg: rgb(255, 255, 255);
-  --bs-btn-border-color: rgb(255, 255, 255);
+  --bs-btn-bg: rgb(246, 246, 246);
+  --bs-btn-border-color: rgb(246, 246, 246);
   --bs-btn-hover-color: #000;
-  --bs-btn-hover-bg: white;
-  --bs-btn-hover-border-color: white;
-  --bs-btn-focus-shadow-rgb: 217, 217, 217;
+  --bs-btn-hover-bg: #f7f7f7;
+  --bs-btn-hover-border-color: #f7f7f7;
+  --bs-btn-focus-shadow-rgb: 209, 209, 209;
   --bs-btn-active-color: #000;
-  --bs-btn-active-bg: white;
-  --bs-btn-active-border-color: white;
+  --bs-btn-active-bg: #f8f8f8;
+  --bs-btn-active-border-color: #f7f7f7;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
   --bs-btn-disabled-color: #000;
-  --bs-btn-disabled-bg: rgb(255, 255, 255);
-  --bs-btn-disabled-border-color: rgb(255, 255, 255);
+  --bs-btn-disabled-bg: rgb(246, 246, 246);
+  --bs-btn-disabled-border-color: rgb(246, 246, 246);
 }
 
 .btn-outline-danger {
-  --bs-btn-color: rgb(255, 255, 255);
-  --bs-btn-border-color: rgb(255, 255, 255);
+  --bs-btn-color: rgb(246, 246, 246);
+  --bs-btn-border-color: rgb(246, 246, 246);
   --bs-btn-hover-color: #000;
-  --bs-btn-hover-bg: rgb(255, 255, 255);
-  --bs-btn-hover-border-color: rgb(255, 255, 255);
-  --bs-btn-focus-shadow-rgb: 255, 255, 255;
+  --bs-btn-hover-bg: rgb(246, 246, 246);
+  --bs-btn-hover-border-color: rgb(246, 246, 246);
+  --bs-btn-focus-shadow-rgb: 246, 246, 246;
   --bs-btn-active-color: #000;
-  --bs-btn-active-bg: rgb(255, 255, 255);
-  --bs-btn-active-border-color: rgb(255, 255, 255);
+  --bs-btn-active-bg: rgb(246, 246, 246);
+  --bs-btn-active-border-color: rgb(246, 246, 246);
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-  --bs-btn-disabled-color: rgb(255, 255, 255);
+  --bs-btn-disabled-color: rgb(246, 246, 246);
   --bs-btn-disabled-bg: transparent;
-  --bs-btn-disabled-border-color: rgb(255, 255, 255);
+  --bs-btn-disabled-border-color: rgb(246, 246, 246);
   --bs-gradient: none;
 }
 
@@ -6378,7 +6393,7 @@ textarea.form-control-lg {
 
 .text-bg-danger {
   color: #000 !important;
-  background-color: RGBA(255, 255, 255, var(--bs-bg-opacity, 1)) !important;
+  background-color: RGBA(246, 246, 246, var(--bs-bg-opacity, 1)) !important;
 }
 
 .link-danger {
@@ -6386,8 +6401,8 @@ textarea.form-control-lg {
   text-decoration-color: RGBA(var(--bs-danger-rgb), var(--bs-link-underline-opacity, 1)) !important;
 }
 .link-danger:hover, .link-danger:focus {
-  color: RGBA(255, 255, 255, var(--bs-link-opacity, 1)) !important;
-  text-decoration-color: RGBA(255, 255, 255, var(--bs-link-underline-opacity, 1)) !important;
+  color: RGBA(248, 248, 248, var(--bs-link-opacity, 1)) !important;
+  text-decoration-color: RGBA(248, 248, 248, var(--bs-link-underline-opacity, 1)) !important;
 }
 
 .link-body-emphasis {
@@ -11424,6 +11439,54 @@ form select {
   padding: 5px;
 }
 
+.col-xxl-6 {
+  /* Establecemos la altura de las secciones para que sean iguales */
+  height: 300px;
+  overflow: hidden; /* Ocultamos el contenido que exceda la altura */
+  transition: height 0.3s; /* Agregamos una transición de altura para crear el efecto slide */
+}
+
+.col-xxl-6.animated-slide {
+  /* Definimos la altura inicial del elemento antes de la animación */
+  height: auto;
+}
+
+.col-xxl-6 > .container > .row > .col-md-12 {
+  opacity: 0; /* Hacemos que el contenido esté inicialmente oculto */
+  transition: opacity 0.3s; /* Agregamos una transición de opacidad para que aparezca suavemente */
+}
+
+.col-xxl-6.animated-slide > .container > .row > .col-md-12 {
+  opacity: 1; /* Hacemos que el contenido aparezca cuando el elemento tiene la clase animated-slide */
+}
+
+.animate-button {
+  display: inline-block;
+  padding: 10px 20px;
+  border: none;
+  background-color: #dc3545;
+  color: white;
+  cursor: pointer;
+  transition: background-color 0.3s, color 0.3s;
+}
+.animate-button:hover {
+  background-color: #bd2130;
+}
+.animate-button.animated-button {
+  animation: pulseAnimation 1s infinite;
+}
+
+@keyframes pulseAnimation {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.1);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
 footer {
   background-color: #000000;
   padding: 20px;
