--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,5 @@
 $theme-colors: (
-    "danger":    rgb(255, 255, 255),
+    "danger":    rgb(246, 246, 246),
   ) ;
  .navbar-nav .nav-link
  {color: rgb(0, 0, 0);
@@ -7,6 +7,22 @@ $theme-colors: (
         color: rgb(149, 192, 255); // Cambia el color de texto a azul cuando el mouse está sobre el enlace
       } 
     }
+    @keyframes bounce {
+      0%, 20%, 50%, 80%, 100% {
+          transform: translateY(0);
+      }
+      40% {
+          transform: translateY(-30px);
+      }
+      60% {
+          transform: translateY(-15px);
+      }
+  }
+
+  // Estilos para el botón animado
+  .animated-button {
+    animation: bounce 1s infinite; /* Aplicar la animación de rebote definida en keyframes */
+  }
  @import "../node_modules/bootstrap/scss/bootstrap";
  @import "./components/header";
  @import "./components/main";
