--- a/scss/base/_mixins.scss
+++ b/scss/base/_mixins.scss
@@ -2,6 +2,16 @@
 
 // Mixins
 
+@mixin list-reset {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+
+  li {
+    margin-bottom: 20px; // Ajusta el margen inferior entre elementos de la lista
+  }
+}
+
 @mixin center {
     display: flex;
     flex-direction: column;
