--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -47,8 +47,8 @@
 }
 
 .imageabsolut {
-  height: 100vh;
-  width: 100vw;
+  height: auto;
+  width: auto;
   overflow: hidden;
   position: absolute;
   top: 50%;
