--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -4,6 +4,14 @@
 .main {
   @include grid-style;
 }
+
+.grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 20px;
+  padding: 20px;
+}
+
 ul {
   @include list-reset;
 }
