--- a/scss/base/variables.scss
+++ b/scss/base/variables.scss
@@ -22,6 +22,7 @@ $large-screen: 1200px;
 
 $font-family: Arial, sans-serif;
 $font-size-h1: 24px;
+$font-size-h1-mobile: 20px;
 $font-size-p: 16px;
 $font-size-2rem: 2rem;
 $font-size-3rem: 3rem;
